# arbitrary-fixed-glsl

./: .gitignore  .gitmodules  Cargo.toml  arbitraryfixed.glsl  build.rs
glsl/: arbitraryfixed.glsl  basic_ops.glsl
src/: lib.rs
