[package]
name = "arbitrary-fixed-glsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary-fixed = { path = "arbitrary-fixed-rs" }

[workspace]
members = ["arbitrary-fixed-rs"]

[build-dependencies]
arbitrary-fixed = { path = "arbitrary-fixed-rs" }
